<resources>
    <string name="app_name">EasyJob</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="start_page_title">Welcome \nEasy Job</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="menu_home">Home</string>
    <string name="my_job">My Job</string>
    <string name="my_wallet">My Wallet</string>
    <string name="me">Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cb_tnc"><![CDATA[Agree to Terms and\n Conditions & Privacy Policy]]></string>
    <string name="btnregister">Register</string>
    <string name="switch_login_page">Already has account?\n <font color="#B3004932">Log in </font>now</string>
    <string name="btnlogin">Login</string>
    <string name="sign_up_account">Not Account? <font color="#B3004932">Sign Up </font>now!</string>
    <string name="reset_password">Forger Password? Click to <font color="#B3004932">Reset</font></string>
    <string name="register_as_an_employer">Register as an <font color="#B3004932">Employer</font></string>
    <string name="register_as_an_user">Register as a <font color="#B3004932">User</font></string>
    <string name="login_as_an_employer">Login as an <font color="#B3004932">Employer</font></string>
    <string name="user_sign_up">User\nSign Up</string>
    <string name="password_rest">Password Rest</string>
    <string name="send">Send</string>
    <string name="login_as_an_user">Login as an <font color="#B3004932">User</font></string>
    <string name="employer_sign_up">Employer\nSign Up</string>
    <string name="login">Login</string>
    <string name="posting_date_title">Posting Date:</string>
    <string name="posting_date">06 Dec 2023, 16:19</string>
    <string name="example_job_title">Example Job</string>
    <string name="example_job_type">Full Time</string>
    <string name="viewed"> viewed</string>
    <string name="job_details">Job Details</string>
    <string name="example_job_status">Job Status Show here</string>
    <string name="alert_complete_profile">Please complete your profile before posting job</string>
    <string name="post_job_page_title">Post Job</string>
    <string name="job_title">Job Title</string>
    <string name="job_title_hint">Enter your job title</string>
    <string name="job_type">Job Type</string>
    <string-array name="job_type_select">
        <item>Internship</item>
        <item>Part Time</item>
        <item>Full Time</item>
    </string-array>
    <string name="internship">Internship</string>
    <string name="temporary_work">Temporary Work</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="job_type_hint">Please select a job type</string>
    <string name="job_type_avoid">Temporary jobs cannot be selected together with other job types</string>
    <string name="job_salary">Job Salary</string>
    <string name="job_salary_hint">RM</string>
    <string name="working_hour">Working Hour</string>
    <string-array name="working_hour_start">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="working_hour_end">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="to">To</string>
    <string name="workplace">Workplace</string>
    <string name="workplace_hint">Location</string>
    <string name="job_requirement">Job Requirement</string>
    <string name="job_requirement_hint">Please describe the job requirement</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="responsibilities_hint">Please describe the job responsibilities</string>
    <string name="job_status">Job Status</string>
    <string name="job_status_available">Available</string>
    <string name="job_status_unavailable">Unavailable</string>
    <string name="btn_save_job">Save Job</string>
    <string name="btn_post_now">Post Now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="my_favorite">My Favorite</string>
    <string-array name="language">
        <item>English</item>
        <item>Simplified Chinese </item>
    </string-array>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="education_level">Education Level</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="about_me">About Me</string>
    <string name="resume">Resume</string>
    <string name="personal_information">Personal Information</string>
    <string name="job_detail_page_title">Job Details</string>
    <string name="manage_applicant_button">Manage Applicant</string>
    <string name="edit_button">Edit</string>
    <string name="title_activity_job_edit_form">JobEditForm</string>
    <string name="show_favorite_added">Job added to favorites</string>
    <string name="show_favorite_added_failed">Failed to add job to favorites</string>
    <string name="show_favorite_removed">Job removed from favorites</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="job_edit_form_title">Edit Job</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_your_contact_number">Enter Your Contact Number</string>
    <string name="enter_your_desired_salary">Enter Your expectat Salary</string>
    <string name="enter_your_home_address">Enter Your Home Address</string>
    <string name="introduce_yourself">Introduce Yourself</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="expectation_salary_rm">Expectation Salary (RM)</string>
    <string name="no_work_display">You haven\'t posted any jobs yet</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="company_overview">Employer Overview</string>
    <string name="employer_contact">Employer Contact</string>
    <string name="employer_email">Employer Email</string>
    <string name="employer_name">Employer Name</string>
    <string name="company_industry">Company Industry (Optional)</string>
    <string name="company_industry_view">Company Industry</string>
    <string name="employer_address">Employer Address</string>
    <string name="enter_your_company_address">Enter Your Address</string>
    <string name="enter_your_company_industry">Enter Your Company Industry</string>
    <string name="gender">Gender</string>
    <string name="enter_your_gender">Enter Your Gender</string>
    <string name="introduce_your_company">Introduce Yourself</string>
    <string name="my_job_page_title">My Job</string>
    <string name="home">Home</string>
    <string name="welcome_to_Easy_Job">Welcome to Easy Job</string>
    <string name="view_company_info">About Company</string>
    <string name="apply_job_button">Apply Job</string>
    <string name="AppliedJob">My Applied Job</string>
    <string name="FavouriteJob">My Favourite Job</string>
    <string name="applied_date_title">Applied Date:</string>
    <string name="rejected_date_title">Rejected Date:</string>
    <string name="Approved_date_title">Approved Date:</string>
    <string name="example_job_applied_status">Show job applied here</string>
    <string name="no_apply_job_show">You Haven\'t Apply Any Job</string>
    <string name="show_cancel_application_confirm_message">Do you want to cancel your application for this job?</string>
    <string name="show_applied_success_message">Applied Successfully!!</string>
    <string name="show_repeat_applied_job_message">You have applied this job before</string>
    <string name="employer_approved_job">employer has approved your application</string>
    <string name="employer_paid_deposit">employer has paid the deposit</string>
    <string name="deposit_received">Deposits are debited to your wallet</string>
    <string name="messageDialog_yes">Yes</string>
    <string name="messageDialog_confirm">Confirm</string>
    <string name="messageDialog_without_saving">Do you want to exit without saving changes?</string>
    <string name="messageDialog_no">no</string>
    <string name="approvedConfirmation">Do you want to approve </string>
    <string name="messageDialog_need_to_pay_deposit1">You will need to pay RM</string>
    <string name="messageDialog_need_to_pay_deposit2"> as deposit</string>
    <string name="messageDialog_deposit_will_transfer">Deposit will transfer to applicant</string>
    <string name="messageDialog_deposit_will_refund">The deposit you have paid will be refunded to your wallet</string>
    <string name="choose_language">Choose Language</string>
    <string name="change_language">Change Language</string>
    <string name="restart_app_message">After Changing the language, the application will restart. Are you sure you want to change languages?</string>
    <string name="language_english">English</string>
    <string name="language_simplified_chinese">简体中文</string>
    <string name="apply_date_title">Apply Date : </string>
    <string name="example_applicant_name">Michelle</string>
    <string name="example_contact">012–7123453</string>
    <string name="example_email">michelle@gmail.com</string>
    <string name="example_apply_status">Pending</string>
    <string name="currency">RM</string>
    <string name="example_balance">0.00</string>
    <string name="total_balance">Total Balance</string>
    <string name="cash_out">Cash Out</string>
    <string name="transaction_history">History</string>
    <string name="reload_page_title">Reload</string>
    <string name="hint_enter_amount">Enter your amount</string>
    <string name="min_reload">Min reload amount is RM10</string>
    <string name="rm50">RM 50</string>
    <string name="rm100">RM 100</string>
    <string name="rm200">RM 200</string>
    <string name="rm300">RM 300</string>
    <string name="rm500">RM 500</string>
    <string name="other">Other</string>
    <string name="no_record">No record</string>
    <string name="Continue">Continue</string>
</resources>